added logic for getTripMetrics & getAtRiskTrips

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,81 @@
-spring.application.name=GoTyolo Booking Service
-# Database for DOCKER
+
+# Spring Boot
+spring.application.name=GoTyolo-Booking-Service
+
+# ========================================
+# DATABASE (Docker/Local PostgreSQL)
+# ========================================
 spring.datasource.url=jdbc:postgresql://localhost:5432/gotyolo
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Connection Pool
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+
+# ========================================
 # JPA / Hibernate
+# ========================================
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
-# Logging
-logging.level.com.gotyolo=DEBUG
+
+# UUID Support
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+# ========================================
+# JACKSON (JSON Dates)
+# ========================================
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSSZ
+spring.jackson.time-zone=UTC
+
+# ========================================
+# BUSINESS CONFIG
+# ========================================
+app.booking.expiry-minutes=15
+app.at-risk.days-before-departure=7
+app.occupancy.low-threshold-percent=50
+
+# ========================================
+# SCHEDULER CONFIG
+# ========================================
+spring.task.scheduling.pool.size=2
+spring.task.execution.pool.core-size=2
+spring.task.execution.pool.max-size=4
+
+# ========================================
+# LOGGING
+# ========================================
+logging.level.root=INFO
+logging.level.com.gotyolo.booking=DEBUG
+logging.level.com.gotyolo.booking.service=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# File Logging with Rotation
 logging.file.name=logs/gotyolo.log
+logging.file.max-size=10MB
+logging.file.max-history=30
+logging.logback.rollingpolicy.total-size-cap=1GB
+
+# Console Pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# ========================================
+# SERVER
+# ========================================
+server.port=8080
+server.servlet.context-path=/
+
+# ========================================
+# ACTUATOR (Production Monitoring)
+# ========================================
+management.endpoints.web.exposure.include=health,info,metrics,scheduledtasks
+management.endpoint.health.show-details=always
