--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,19 +20,14 @@ spring.datasource.hikari.idle-timeout=600000
 # JPA / Hibernate
 # ========================================
 spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # UUID Support
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
-
-# ========================================
-# JACKSON (JSON Dates)
-# ========================================
-spring.jackson.serialization.write-dates-as-timestamps=false
-spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSSZ
-spring.jackson.time-zone=UTC
 
 # ========================================
 # BUSINESS CONFIG
@@ -57,6 +52,7 @@ logging.level.com.gotyolo.booking.service=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # File Logging with Rotation
 logging.file.name=logs/gotyolo.log
