--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.hikari.idle-timeout=600000
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -47,12 +47,18 @@ spring.task.execution.pool.max-size=4
 # LOGGING
 # ========================================
 logging.level.root=INFO
-logging.level.com.gotyolo.booking=DEBUG
-logging.level.com.gotyolo.booking.service=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql=TRACE
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Your app
+logging.level.com.gotyolo.booking=INFO
+
+# SILENCE Hibernate noise
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.hibernate.type.descriptor.sql=ERROR
+logging.level.org.hibernate.engine=ERROR
+
+# Silence Spring noise
+logging.level.org.springframework.web=ERROR
+logging.level.org.springframework.security=ERROR
 
 # File Logging with Rotation
 logging.file.name=logs/gotyolo.log
